Load model and do basic predict

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 altair
 numpy
-pandas
+pandas~=2.2.2
 pydeck
-streamlit
+streamlit~=1.34.0
+plotly~=5.22.0
+scikit-learn
+joblib
+tensorflow~=2.15.0
+keras~=2.15.0
+yfinance~=0.2.38
